Fix templates being visible on old browsers

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -544,6 +544,10 @@ a.button {
 }
 
 /* Modals */
+template {
+    display: none;
+}
+
 #modal-left {
     position: fixed;
     top: 0;
